--- a/JeffSite/appsettings.Development.json
+++ b/JeffSite/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "JeffContext": "server=localhost;userid=root;password=12345678;database=jeffdb"
+    "JeffSite": "server=a2nlmysql45plsk.secureserver.net;userid=jeffUserBD;password=89&Owf2j;database=jeffdb"
   }
 }
