--- a/JeffSite_WF_472/JeffSite_WF_472.csproj
+++ b/JeffSite_WF_472/JeffSite_WF_472.csproj
@@ -350,9 +350,13 @@
     <Compile Include="App_Start\NinjectDependencyResolver.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CarouselController.cs" />
+    <Compile Include="Controllers\ConfiguracaoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeitorController.cs" />
     <Compile Include="Controllers\LojaController.cs" />
+    <Compile Include="Controllers\MallingController.cs" />
+    <Compile Include="Controllers\SocialMidiaController.cs" />
     <Compile Include="Data\JeffContext.cs" />
     <Compile Include="Data\SeedingService.cs" />
     <Compile Include="Global.asax.cs">
