ajust login e logout

--- a/JeffSite_WF_472/JeffSite_WF_472.csproj
+++ b/JeffSite_WF_472/JeffSite_WF_472.csproj
@@ -375,6 +375,7 @@
     <Compile Include="Models\Malling.cs" />
     <Compile Include="Models\SocialMidia.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\UserLogged.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CarouselService.cs" />
     <Compile Include="Services\ConfiguracaoService.cs" />
