--- a/JeffSite_WF_472/JeffSite_WF_472.csproj
+++ b/JeffSite_WF_472/JeffSite_WF_472.csproj
@@ -2152,8 +2152,6 @@
     <Content Include="Scripts\bootstrap\dist\js\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap\LICENSE" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Content\img\Carousel\carroseu.jpeg" />
-    <Content Include="Content\img\Carousel\imgLogo.jpg" />
     <Content Include="Content\img\ImgLogo.jpg" />
     <Content Include="Content\img\imgProfile.jpg" />
     <Content Include="Content\img\Leitor\20210307083233_MercadoLivreLogo.jpg" />
@@ -2223,6 +2221,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\img\Carousel\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
