--- a/JeffSite_WF_472/Web.config
+++ b/JeffSite_WF_472/Web.config
@@ -19,7 +19,7 @@
 			  <add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
 		  </assemblies>
 	  </compilation>
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
     <trust level="Full" />
   </system.web>
   <runtime>
