--- a/JeffSite_WF_472/Web.config
+++ b/JeffSite_WF_472/Web.config
@@ -20,8 +20,9 @@
 			</assemblies>
 		</compilation>
 		<httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" />
-		<customErrors mode="Off"/>
 		<trust level="Full" />
+		<customErrors mode="Off"/>
+		<authentication mode="None"/>
 	</system.web>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
